WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148653
CVE-2016-4729
The error handler of ReadableJSStream should own stream object
https://bugs.webkit.org/show_bug.cgi?id=148653
Summary
The error handler of ReadableJSStream should own stream object
Yusuke Suzuki
Reported
2015-08-31 16:01:52 PDT
The error handler of ReadableJSStream should own stream object
Attachments
Patch
(6.16 KB, patch)
2015-08-31 16:30 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-mavericks
(612.38 KB, application/zip)
2015-08-31 17:03 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2015-08-31 16:30:33 PDT
Created
attachment 260327
[details]
Patch
Yusuke Suzuki
Comment 2
2015-08-31 16:44:45 PDT
Comment on
attachment 260327
[details]
Patch Thank you for your review!
Build Bot
Comment 3
2015-08-31 17:03:04 PDT
Comment on
attachment 260327
[details]
Patch
Attachment 260327
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/127821
New failing tests: http/tests/w3c/dom/nodes/ParentNode-querySelector-All.html
Build Bot
Comment 4
2015-08-31 17:03:08 PDT
Created
attachment 260332
[details]
Archive of layout-test-results from ews103 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5
Yusuke Suzuki
Comment 5
2015-08-31 17:03:30 PDT
rdar://problem/22497420
WebKit Commit Bot
Comment 6
2015-08-31 17:04:27 PDT
Comment on
attachment 260327
[details]
Patch Clearing flags on attachment: 260327 Committed
r189196
: <
http://trac.webkit.org/changeset/189196
>
WebKit Commit Bot
Comment 7
2015-08-31 17:04:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug