Source/WebCore/bindings/js/ReadableJSStream.h
@@ -110,7 +110,6 @@ private:
     std::unique_ptr<ReadableStreamController> m_controller;
     // FIXME: we should consider not using JSC::Strong, see https://bugs.webkit.org/show_bug.cgi?id=146278
     JSC::Strong<JSC::Unknown> m_error;
-    JSC::Strong<JSC::JSFunction> m_errorFunction;
 
     JSC::Strong<JSC::JSObject> m_source;
     JSC::Strong<JSC::JSFunction> m_sizeFunction;
